[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
[[bin]]
name = "day1"
path = "day1.rs"

[[bin]]
name = "day2"
path = "day2.rs"

[[bin]]
name = "day2part1"
path = "day2part1.rs"

[[bin]]
name = "day2part2"
path = "day2part2.rs"

[[bin]]
name = "day3part1"
path = "day3part1.rs"

[[bin]]
name = "day3part2"
path = "day3part2.rs"

[[bin]]
name = "day4part1"
path = "day4part1.rs"

[[bin]]
name = "day4part2"
path = "day4part2.rs"

[[bin]]
name = "day5part1"
path = "day5part1.rs"

[[bin]]
name = "day5part2"
path = "day5part2.rs"

[[bin]]
name = "day6part1"
path = "day6part1.rs"

[[bin]]
name = "day6part2"
path = "day6part2.rs"

[[bin]]
name = "day7part1"
path = "day7part1.rs"

[[bin]]
name = "day7part2"
path = "day7part2.rs"

[[bin]]
name = "day8part1"
path = "day8part1.rs"

[[bin]]
name = "day8part2"
path = "day8part2.rs"

[[bin]]
name = "day9part1"
path = "day9part1.rs"

[[bin]]
name = "day9part2"
path = "day9part2.rs"

[[bin]]
name = "day10part1"
path = "day10part1.rs"

[[bin]]
name = "day10part2"
path = "day10part2.rs"

[[bin]]
name = "day11part1"
path = "day11part1.rs"

[[bin]]
name = "day11part2"
path = "day11part2.rs"

[[bin]]
name = "day12part1"
path = "day12part1.rs"

[[bin]]
name = "day12part2"
path = "day12part2.rs"

[[bin]]
name = "day13part1"
path = "day13part1.rs"

[[bin]]
name = "day13part2"
path = "day13part2.rs"

[[bin]]
name = "day14part1"
path = "day14part1.rs"

[[bin]]
name = "day14part2"
path = "day14part2.rs"

[[bin]]
name = "day15part1"
path = "day15part1.rs"

